Revisado lo de marc, falta refactor

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ Assets/Plugins/PandaBehaviour/Examples/01_Move/
 Assets/Plugins/PandaBehaviour/Examples/02_PlayTag/
 
 Assets/Plugins/PandaBehaviour/Examples/03_Shooter/
+
+Assets/Resources/AIConfigs\.meta
